<?xml version="1.0"?>
<package format="3">
  <name>trakstar</name>
  <version>0.1.0</version>
  <description>Trakstar C++ ROS2 wrapper for USB tracker</description>
  <maintainer email="jbp2157@columbia.edu">Joaquin Palacios</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
</package>
